--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "name": "image_recognition_app",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "ts-loader": "^3.5.0"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.2.2",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.11"
+  }
 }
