--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "source-map-loader": "^0.2.4",
     "typescript": "^3.2.2",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^3.1.11"
   }
 }
