--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "ts-loader": "^3.5.0"
+    "ts-loader": "3.5.0",
+    "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
