--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
-  "name": "image_recognition_app",
-  "private": true,
+  "license": "UNLICENSED",
   "dependencies": {
-    "@rails/webpacker": "3.5",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@rails/webpacker": "^4.0.2",
+    "@types/clipboard": "^2.0.1",
+    "@types/jquery": "^3.3.27",
+    "@types/jquery-sortable": "^0.9.29",
+    "@types/jqueryui": "^1.12.7",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
-    "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.2.1",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "<4.0.0",
+    "bootstrap-waitingfor": "^1.2.7",
+    "chrome-launcher": "^0.10.5",
+    "chrome-remote-interface": "^0.27.0",
+    "clipboard": "^2.0.4",
     "jquery": "^3.3.1",
-    "prop-types": "^15.6.2",
+    "log-timestamp": "^0.3.0",
+    "minimist": "^1.2.0",
+    "postcss-cssnext": "^3.1.0",
+    "prop-types": "^15.7.2",
+    "qrcode-generator-ts": "^0.0.4",
+    "rails-ujs": "^5.2.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "ts-loader": "3.5.0",
+    "react_ujs": "^2.4.4",
+    "sharp": "^0.21.1",
+    "socket.io-client": "2.2.0",
+    "sprintf-js": "^1.1.2",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.3333",
     "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.2.2",
-    "webpack-dev-server": "^3.1.11"
+    "webpack-dev-server": "^3.2.1"
   }
 }
